# gpui-toolkit

./: .gitignore  Cargo.toml  Justfile  README.md
crates/gpui-d3rs/examples/: chromatic_demo.rs  delaunay_demo.rs  gpu2d_contour_demo.rs  gpu2d_shapes_demo.rs  shape_demo.rs  surface_demo.rs  timer_demo.rs
crates/gpui-d3rs/golden/: generate.js
crates/gpui-d3rs/golden/array/: bin.json  bisect.json  transform.json
crates/gpui-d3rs/golden/axis/: axis.json
crates/gpui-d3rs/golden/ease/: ease.json
crates/gpui-d3rs/src/: lib.rs
crates/gpui-d3rs/tests/: golden_tests.rs  tests_golden.rs
crates/gpui-px/: Cargo.toml
crates/gpui-px/examples/: bars_debug.rs  lines_debug.rs
crates/gpui-px/src/: area.rs  bar.rs  boxplot.rs  color_scale.rs  interaction.rs  lib.rs  line.rs  pie.rs  treemap.rs
crates/gpui-themes/: Cargo.toml
crates/gpui-ui-kit/: .gitignore  Cargo.toml  README.md
crates/gpui-ui-kit/examples/: pane_divider_debug.rs  potentiometer_debug.rs  select_debug.rs  volume_knob_debug.rs  workflow_debug.rs
crates/gpui-ui-kit/examples/includes/: render_accordion.inc.rs  render_alert.inc.rs  render_avatar.inc.rs  render_badge.inc.rs  render_button.inc.rs  render_card.inc.rs  render_dialog.inc.rs  render_layout.inc.rs  render_menu.inc.rs  render_potentiometer.inc.rs  render_tabs.inc.rs  render_text.inc.rs  render_tooltip.inc.rs  render_wizard.inc.rs  render_workflow.inc.rs
crates/gpui-ui-kit/src/: alert.rs  animation.rs  button.rs  checkbox.rs  i18n.rs  stack.rs  tabs.rs
crates/gpui-ui-kit/src-app/: miniapp.rs  mod.rs
crates/gpui-ui-kit/src/audio/: potentiometer.rs  volume_knob.rs
crates/gpui-ui-kit/src/autoeq/: mod.rs
crates/gpui-ui-kit/src/workflow/: mod.rs
crates/gpui-ui-kit/tests/components/: breadcrumbs_test.rs  button_set_test.rs  button_test.rs  icon_button_test.rs  number_input_test.rs  text_test.rs  toast_test.rs  tooltip_test.rs
crates/gpui-ui-kit/tests/integration/: accordion_test.rs  avatar_test.rs  badge_test.rs  checkbox_test.rs  mod.rs  number_input_test.rs  pane_divider_test.rs  select_test.rs  toast_test.rs  toggle_test.rs
gpui-d3rs/: .gitignore  Cargo.toml  README.md
gpui-d3rs/examples/: array_demo.rs  chord_demo.rs  color_demo.rs  contour_demo.rs  fetch_demo.rs  force_demo.rs  geo_demo.rs  gpu2d_demo.rs  hierarchy_demo.rs  interpolate_demo.rs  quadtree_demo.rs  scale_demo.rs  surface3d_demo.rs  surface_logscale_demo.rs  transition_demo.rs
gpui-d3rs/golden/: package.json
gpui-d3rs/golden/array/: statistics.json  ticks.json
gpui-d3rs/golden/brush/: brush.json
gpui-d3rs/golden/format/: format.json
gpui-d3rs/golden/geo/: geo.json
gpui-d3rs/golden/interpolate/: color.json
gpui-d3rs/golden/scales/: pow.json  quantile.json  quantize.json  threshold.json
gpui-d3rs/golden/shape/: arc.json  line.json  pie.json  stack.json
gpui-d3rs/src/array/: sets.rs  statistics.rs  ticks.rs  transform.rs
gpui-d3rs/src/axis/: config.rs  mod.rs  orientation.rs
gpui-d3rs/src/brush/: mod.rs
gpui-d3rs/src/chord/: mod.rs
gpui-d3rs/src/color/: mod.rs  rgb.rs  scheme.rs
gpui-d3rs/src/contour/: marching_squares.rs  thresholds.rs
gpui-d3rs/src/delaunay/: mod.rs  voronoi.rs
gpui-d3rs/src/fetch/: auto_type.rs  dsv.rs
gpui-d3rs/src/force/: mod.rs
gpui-d3rs/src/format/: locale.rs  mod.rs  specifier.rs
gpui-d3rs/src/geo/: mod.rs  projection.rs
gpui-d3rs/src/gpu2d/: element.rs  renderer.rs  shaders.rs  shapes.rs
gpui-d3rs/src/gpu2d/primitives/: line.rs  mod.rs
gpui-d3rs/src/gpu2d/text/: atlas.rs
gpui-d3rs/src/gpu3d/: config.rs  data.rs  projection_tests.rs  shaders.rs
gpui-d3rs/src/grid/: mod.rs
gpui-d3rs/src/hierarchy/: tree.rs
gpui-d3rs/src/interpolate/: mod.rs  number.rs  piecewise.rs  transform.rs  zoom.rs
gpui-d3rs/src/legend/: mod.rs
gpui-d3rs/src/polygon/: mod.rs
gpui-d3rs/src/quadtree/: mod.rs
gpui-d3rs/src/scale/: linear.rs  mod.rs  quantile.rs  quantize.rs  traits.rs
gpui-d3rs/src/shape/: bar.rs  contour.rs  curve.rs  link.rs  path.rs  stack.rs
gpui-d3rs/src/surface/: mesh.rs  mod.rs  projection.rs  render.rs
gpui-d3rs/src/text/: mod.rs  vector_font.rs
gpui-d3rs/src/time/: format.rs  interval.rs  mod.rs
gpui-px/: Cargo.toml  LICENSE  README.md
gpui-px/examples/: logscale_demo.rs  scatter_debug.rs
gpui-px/src/: contour.rs  error.rs  heatmap.rs  interaction.rs  isoline.rs  lib.rs  line.rs  scatter.rs  surface3d.rs  treemap.rs
gpui-themes/: Cargo.toml
gpui-themes/src/: editor.rs  lib.rs  showcase.rs  theme.rs
gpui-ui-kit/: Cargo.toml
gpui-ui-kit-macros/: Cargo.toml
gpui-ui-kit/examples/: accordion_debug.rs  autoeq_form_debug.rs  input_debug.rs  showcase.rs  vertical_slider_debug.rs  wizard_debug.rs
gpui-ui-kit/examples/includes/: render_breadcrumbs.inc.rs  render_form.inc.rs  render_icon.inc.rs  render_progress.inc.rs  render_spinners.inc.rs  render_toast.inc.rs
gpui-ui-kit/gpui-ui-kit-macros/: Cargo.toml
gpui-ui-kit/gpui-ui-kit-macros/src/: lib.rs
gpui-ui-kit/src/: breadcrumbs.rs  button_set.rs  focus.rs  icon_button.rs  input.rs  lib.rs  number_input.rs  pane_divider.rs  select.rs  slider.rs  text.rs  theme.rs  toast.rs  toggle.rs
gpui-ui-kit/src/audio/: potentiometer.rs  vertical_slider.rs  volume_knob.rs
gpui-ui-kit/src/wizard/: mod.rs
gpui-ui-kit/src/workflow/: canvas.rs  node.rs
gpui-ui-kit/tests/: README.md  component_tests.rs  i18n_tests.rs  integration_tests.rs
gpui-ui-kit/tests/components/: accordion_test.rs  alert_test.rs  avatar_test.rs  badge_test.rs  card_test.rs  checkbox_test.rs  dialog_test.rs  input_test.rs  menu_test.rs  mod.rs  pane_divider_test.rs  progress_test.rs  select_test.rs  slider_test.rs  spinner_test.rs  tabs_test.rs  theme_test.rs  toggle_test.rs
gpui-ui-kit/tests/integration/: alert_test.rs  breadcrumbs_test.rs  button_set_test.rs  button_test.rs  card_test.rs  color_picker_test.rs  dialog_test.rs  icon_button_test.rs  input_test.rs  menu_test.rs  potentiometer_test.rs  progress_test.rs  slider_test.rs  spinner_test.rs  stack_test.rs  tabs_test.rs  text_test.rs  tooltip_test.rs  vertical_slider_test.rs  volume_knob_test.rs  wizard_test.rs
(+69 files in other folders)
