[workspace]
members = [
    "gpui-d3rs",
    "gpui-px",
    "gpui-themes",
    "gpui-ui-kit",
    "gpui-ui-kit-macros",
]
resolver = "3"

[workspace.package]
version = "0.6.0"
authors = ["Pierre F. Aubert pierre@spinorama.org"]
description = "Optimise the sound of your speakers or your headphones"
edition = "2024"
documentation = "https://docs.rs/gpui-toolkit"
license = "ISC"
repository = "https://github.com/pierreaubert/gpui-toolkit"

[workspace.dependencies]

# Serialization and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async and networking
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
reqwest = { version = "0.13", features = ["json"] }

# CLI and system
delaunator = "1.0"
regex = "1.12"
thiserror = "2.0.17"

# Optimization and math
ndarray = { version = "0.17", default-features = false, features = ["rayon", "blas", "serde"] }
autoeq = { version = ">=0.3.9" }
autoeq-cea2034 = { version = "0.3" }

gpui-d3rs = { path = "gpui-d3rs", version = "0.6" }
gpui-px = { path = "gpui-px", version = "0.6" }
gpui-themes = { path = "gpui-themes", version = "0.6" }
gpui-ui-kit = { path = "gpui-ui-kit", version = "0.6" }
gpui-ui-kit-macros = { path = "gpui-ui-kit-macros", version = "0.6" }

# GPUI framework, using HEAD (macros with _)
# gpui = { version="0.2.2" }
gpui = { version="*", git = "https://github.com/zed-industries/zed.git" }
gpui_macros = { version="*", git = "https://github.com/zed-industries/zed.git" }

# Utilities
approx = "0.5"
proptest = "1.9"
unicode-normalization = "0.1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
lazy_static = "1.4"
bincode = { version = "2.0.1", features = ["serde"] }

# Proc macro dependencies
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }

# Graphics and visualization
wgpu = "25"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.30"
pollster = "0.4"
image = "0.25"
fontdue = "0.9"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }  # optional, might cause more false positives

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"

[profile.dev]
opt-level = 1
split-debuginfo= "packed"
debug = 1
codegen-units = 256

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"  # Changed from "abort" to allow tests to run
