[package]
name = "gpui-themes"
version = "0.5.1"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Theme editor and management for GPUI applications"
license.workspace = true
repository.workspace = true

[dependencies]
# GPUI framework
gpui = { workspace = true }
gpui_macros = { workspace = true }

# UI kit for components
gpui-ui-kit = { workspace = true }

# Serialization for JSON export/import
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "gpui_themes"
path = "src/lib.rs"

[[bin]]
name = "theme-editor"
path = "src/bin/theme_editor.rs"

[[bin]]
name = "theme-showcase"
path = "src/bin/theme_showcase.rs"
